[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
pytorchvideo = "^0.1.5"
regex = "^2023.6.3"
einops = "^0.6.1"
ftfy = "^6.1.1"
timm = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
